- Fixed vehicle labels not showing passenger count
- Fixed special equipments overlapping with the carried bag info on teammate panels
- Fixed cooldown not showing for perk-deck abilities
- Fixed a crash related to stopping ai when custom name labels are disabled
- Fixed crash when AI returns from custody
- Fixed crash related to AI getting downed while the scoreboard is disabled
- Fixed a crash with teammate interactions when the player panels are disabled
- Fixed a crash that could occur when quiting the game at the same time the hostage count gets updated
- Fixed a crash related to trading jokers

Version 1.1 (2017.10.15)
- Modified how the icons panel of the assault ticker works for better addon support
- Added the option to disable hud elements
- Added main player accuracy to scoreboard panel
- Added the option to change the speed of the health gain/loss animation
- Added the option to hide the timer and objective panels or only show them when the tabpanel is open
- Added the option to show names in uppercase
- Added notification and hint text options
- Added subtitle options
- Added Russian localization made by Skyfrost
- Added French localization made by Esawo
- Added compatibility with Press2Hold
- Added compatibility with Big Lobby
- Added compatibility with Assault States
- Added compatibility with Burst Fire
- Added compatibility with Death Wish+
- Improved options menu
- Fixed bot loadout sometimes not showing correctly
- Fixed textures and default options not loading when another mod breaks the options menu
- Fixed a crash related to the assault panel
- Fixed the hostages panel sometimes not playing the assault end animation
- Fixed a rare crash related to beardlib custom music
- Fixed chat messages not being colored correctly when the heister names are turned off
- Fixed teammates bleedout timers and interaction texts not being effected by hud scale
- Fixed mutators list on the tab panel not being affected by hud scale